--- a/ASP.net/會員新增登入/asp.net/Web.config
+++ b/ASP.net/會員新增登入/asp.net/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="none" />
+    </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
