--- a/ASP.net/會員新增登入/asp.net/Web.config
+++ b/ASP.net/會員新增登入/asp.net/Web.config
@@ -16,8 +16,8 @@
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
   <connectionStrings>
-    <add name="WebAppConnString" connectionString="server=bjwork.cjng4ulqqzae.ap-northeast-1.rds.amazonaws.com;User ID=BJroot; Password=bjwork95; Database=ASPTEST;"
-      providerName="MySql.Data.MySqlClient" />
+    <add name="WebAppConnString" connectionString="server=bjwork95.cjng4ulqqzae.ap-northeast-1.rds.amazonaws.com;User ID=BJwork; Password=bjwork95; Database=SuruTest;"
+      providerName="System.Data.SqlClient" />
     <add name="ASPTEST" connectionString="server=bjwork.cjng4ulqqzae.ap-northeast-1.rds.amazonaws.com;user id=BJroot;password=bjwork95;database=ASPTEST;"
       providerName="MySql.Data.MySqlClient" />
     <add name="dbBJSportRecord" connectionString="Data Source=.;Initial Catalog=dbASP_demo;Integrated Security=True"
