--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   如需如何設定 ASP.NET 應用程式的詳細資訊，請前往
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -6,18 +6,20 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework"
-      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-      requirePermission="false"/>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection"
-      connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-WebSite-6474c9fb-b299-4212-a208-bdc1599b017d;AttachDbFilename=|DataDirectory|\aspnet-WebSite-6474c9fb-b299-4212-a208-bdc1599b017d.mdf;Integrated Security=SSPI"
-      providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-WebSite-6474c9fb-b299-4212-a208-bdc1599b017d;AttachDbFilename=|DataDirectory|\aspnet-WebSite-6474c9fb-b299-4212-a208-bdc1599b017d.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
+    <add name="WebAppConnString" connectionString="server=bjwork.cjng4ulqqzae.ap-northeast-1.rds.amazonaws.com;User ID=BJroot; Password=bjwork95; Database=ASPTEST;" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
   <system.web>
     <authentication mode="None"/>
-    <compilation debug="true" targetFramework="4.5.2"/>
+    <compilation debug="true" targetFramework="4.5.2">
+      <assemblies>
+        <add assembly="MySql.Data, Version=6.10.2.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
+        <add assembly="MySql.Web, Version=6.10.2.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5.2"/>
     <pages>
       <namespaces>
@@ -31,7 +33,7 @@
     <membership>
       <providers>
         <!--
-	      此範本已停用 ASP.NET 成員資格。若要了解此範本的 ASP.NET 成員資格支援，請前往下列連結: https://go.microsoft.com/fwlink/?LinkId=301889
+        此範本已停用 ASP.NET 成員資格。若要了解此範本的 ASP.NET 成員資格支援，請前往下列連結: https://go.microsoft.com/fwlink/?LinkId=301889
         -->
         <clear/>
       </providers>
@@ -39,14 +41,14 @@
     <profile>
       <providers>
         <!--
-	      此範本已停用 ASP.NET 成員資格設定檔。若要了解此範本的 ASP.NET 成員資格支援，請前往下列連結: https://go.microsoft.com/fwlink/?LinkId=301889
+        此範本已停用 ASP.NET 成員資格設定檔。若要了解此範本的 ASP.NET 成員資格支援，請前往下列連結: https://go.microsoft.com/fwlink/?LinkId=301889
         -->
         <clear/>
       </providers>
     </profile>
     <roleManager>
       <!--
-	        此範本中已停用 ASP.NET 成員資格角色。若要了解此範本的 ASP.NET 成員資格支援，請前往下列連結: https://go.microsoft.com/fwlink/?LinkId=301889
+          此範本中已停用 ASP.NET 成員資格角色。若要了解此範本的 ASP.NET 成員資格支援，請前往下列連結: https://go.microsoft.com/fwlink/?LinkId=301889
         -->
       <providers>
         <clear/>
@@ -60,9 +62,7 @@
       -->
     <sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
-        <add name="DefaultSessionProvider"
-          type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-          connectionStringName="DefaultConnection"/>
+        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection"/>
       </providers>
     </sessionState>
   </system.web>
@@ -111,12 +111,8 @@
   </entityFramework>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
 </configuration>
