--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -11,6 +11,10 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-WebSite-6474c9fb-b299-4212-a208-bdc1599b017d;AttachDbFilename=|DataDirectory|\aspnet-WebSite-6474c9fb-b299-4212-a208-bdc1599b017d.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
     <add name="WebAppConnString" connectionString="server=bjwork.cjng4ulqqzae.ap-northeast-1.rds.amazonaws.com;User ID=BJroot; Password=bjwork95; Database=ASPTEST;" providerName="MySql.Data.MySqlClient"/>
+
+    <add name="WebAppString" connectionString="server=bjwork95.cjng4ulqqzae.ap-northeast-1.rds.amazonaws.com;User ID=BJwork; Password=bjwork95; Database=SuruTest;"
+      providerName="System.Data.SqlClient" />
+    
   </connectionStrings>
   <system.web>
     <authentication mode="None"/>
