--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   如需如何設定 ASP.NET 應用程式的詳細資訊，請前往
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,12 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-WebSite-6474c9fb-b299-4212-a208-bdc1599b017d;AttachDbFilename=|DataDirectory|\aspnet-WebSite-6474c9fb-b299-4212-a208-bdc1599b017d.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
-    <add name="WebAppConnString" connectionString="server=bjwork.cjng4ulqqzae.ap-northeast-1.rds.amazonaws.com;User ID=BJroot; Password=bjwork95; Database=ASPTEST;" providerName="MySql.Data.MySqlClient"/>
-
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-WebSite-6474c9fb-b299-4212-a208-bdc1599b017d;AttachDbFilename=|DataDirectory|\aspnet-WebSite-6474c9fb-b299-4212-a208-bdc1599b017d.mdf;Integrated Security=SSPI"
+      providerName="System.Data.SqlClient" />
+    <add name="WebAppConnString" connectionString="server=bjwork.cjng4ulqqzae.ap-northeast-1.rds.amazonaws.com;User ID=BJroot; Password=bjwork95; Database=ASPTEST;"
+      providerName="MySql.Data.MySqlClient" />
     <add name="WebAppString" connectionString="server=bjwork95.cjng4ulqqzae.ap-northeast-1.rds.amazonaws.com;User ID=BJwork; Password=bjwork95; Database=SuruTest;"
       providerName="System.Data.SqlClient" />
-    
+    <add name="SuruTestConnectionString" connectionString="Data Source=bjwork95.cjng4ulqqzae.ap-northeast-1.rds.amazonaws.com;Initial Catalog=SuruTest;Persist Security Info=True;User ID=BJwork;Password=bjwork95"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None"/>
@@ -22,6 +24,7 @@
       <assemblies>
         <add assembly="MySql.Data, Version=6.10.2.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
         <add assembly="MySql.Web, Version=6.10.2.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
+        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5.2"/>
@@ -113,6 +116,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  <system.transactions>
+    <defaultSettings timeout="00:03:00" />
+  </system.transactions>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
